# ledger

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  Makefile  NOTICE  README.md  SECURITY.md  babel.cfg  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: accessibility_issue.yml  bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  mutation.yml  release.yml  scorecard.yml  secret-scan-scheduled.yml  semgrep.yml  standards.yml
docs/: ACCESSIBILITY.md  ADOPTING.md  ARCHITECTURE.md  BACKUP-RUNBOOK.md  CONTINUITY.md  DATA-GOVERNANCE.md  DOCUMENTATION-AUDIT.md  DORA-DELIVERY-HEALTH-REVIEW.md  GOVERNANCE.md  I18N.md  IMPROVEMENT-PLAN.md  INCIDENT-RESPONSE.md  MARKET-STRATEGY.md  MUTATION-TESTING.md  MUTUAL-AID.md  PROJECT-SCOPE.md  README.md  RELEASE-0.1.0.md  RESEARCH-ROADMAP.md  RESPONSIBLE-TECH-AUDITS.md  ROADMAP.md  THREAT-MODEL.md  TRANSPARENCY.md  TRY-LEDGER.md  USER-RESEARCH.md  VERIFYING-ATTESTATIONS.md
docs/accessibility/: ACR.md  MANUAL-REVIEW-CADENCE.md
docs/adr/: 0000-record-architecture-decisions.md  0001-record-architecture-decisions.md  0002-agpl-3-0-license.md  0003-identity-separated-from-record.md  0004-bagit-premis-dublin-core-oais.md  0005-stdlib-first-single-dependency.md  0006-standards-applicability.md  0007-withhold-not-403.md  0008-segno-optional-print-dependency.md  0009-expand-standards-applicability.md
docs/audits/: README.md  bias-representational-harm.md  crypto-agility-pq-posture.md  crypto-design-review-embargo-timelock.md  crypto-design-review-sealing-layer.md  dpia.md  ethics-consequence-scan.md  portfolio-standards-conformance-2026-07-11.md  residual-risk-register.md
docs/data/: community-contributions.md
docs/ideation/: 01-deep-dive.md  02-large-scale-fixes.md  03-expansions.md  04-impact-and-sequencing.md  README.md
docs/incidents/: 2026-07-12-cloud-init-secret-tracing.md  README.md
docs/oral-history/: README.md  facilitator-script.md  session-manifest-format.md
docs/research/: USER-RESEARCH.md
docs/reviews/: README.md  community-archivist-pilot.md  manual-accessibility-review.md  threat-model-review.md
infra/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  seed_demo.py
infra/aws/: .gitignore  Caddyfile  README.md  deploy.sh  destroy.sh  docker-compose.deploy.yml
infra/aws/terraform/: ec2.tf  iam.tf  network.tf  outputs.tf  s3.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf  versions.tf
locales/: README.md
src/ledger/: __init__.py  _filelock.py  accessibility_check.py  acr_gen.py  attest.py  attestation.py  backup.py  bag.py  captions.py  cas.py  catalog_index.py  chain.py  checkup.py  cli.py  config.py  consent.py  contribute.py  demo.py  dualcontrol.py  errors.py  export.py  export_drive.py  fixity.py  i18n.py  identity.py  ingest.py  lockdown.py  models.py  moderate.py  oai.py  oais.py  oralhistory.py  pagination.py  parsing.py  preservation.py  print_edition.py  reading_room_enclave.py  redact_suggest.py  render.py  replicate.py  (+7 more)
src/ledger/access/: __init__.py  grants.py  policy.py  redaction.py
src/ledger/locales/: messages.pot
src/ledger/locales/ar/LC_MESSAGES/: messages.mo  messages.po
src/ledger/locales/en/LC_MESSAGES/: messages.mo  messages.po
src/ledger/locales/es/LC_MESSAGES/: messages.mo  messages.po
src/ledger/locales/fr/LC_MESSAGES/: messages.mo  messages.po
src/ledger/metadata/: __init__.py  dublincore.py  ead.py  mets.py  pid.py  premis.py
src/ledger/metadata/schema/: record.schema.json
tests/: conftest.py  test_accessibility_check.py  test_attest.py  test_attestation.py  test_audit_chain.py  test_audit_log.py  test_backup_restore.py  test_bag.py  test_browse_compose.py  test_captions.py  test_cas.py  test_catalog_index.py  test_chain.py  test_checkup.py  test_cli.py  test_config.py  test_consent.py  test_consent_status.py  test_contribute.py  test_deposit_bridge.py  test_disclosure_workflow.py  test_dualcontrol.py  test_edit.py  test_encrypted_backup.py  test_export.py  test_export_drive.py  test_feed.py  test_filelock.py  test_fixity.py  test_grant_auth.py  test_grants_load.py  test_i18n.py  test_i18n_rtl.py  test_identity.py  test_infra_security.py  test_ingest_concurrent.py  test_ingest_e2e.py  test_language_switch.py  test_lockdown.py  test_metadata.py  (+38 more)
tests/fixtures/: README.md  community.txt  public.txt  sealed_conditional.txt  sealed_until.txt  stewards.txt
tools/: check_bcp47.py  check_catalog_parity.py  check_claims.py  check_i18n_deps.py  check_i18n_utf8.py  i18n_normalize_pot.py  perf_budget.py
tools/a11y_browser/: .gitignore  axe.spec.ts  keyboard.spec.ts  package-lock.json  package.json  playwright.config.ts  serve_demo.py
web/: README.md
web/static/: app.css
