# pyproject.toml — single, declarative source of build, dependency, and tool config.
# Configurability/administrability: behaviour is config-over-code; this file is the
# one place project-wide tooling is set.
[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ledger-archive"
version = "0.1.0"
description = "A privacy-first community archive for queer histories and mutual-aid knowledge."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Chelsea Kelly-Reif" }]
keywords = [
    "digital-preservation", "bagit", "premis", "dublin-core", "oais",
    "community-archive", "mutual-aid", "queer-history", "accessibility", "privacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: Sociology :: History",
]

# Affordability/self-sustainability: exactly one runtime dependency, and a free,
# widely-audited one. The preservation core (CAS, BagIt, PREMIS, Dublin Core,
# fixity, the browse server) is pure standard library so a community can run ledger
# on a single inexpensive box with no paid service and no heavy dependency tree.
# `cryptography` is used solely by the encrypted identity vault, where rolling our
# own would be the opposite of safety.
dependencies = [
    "cryptography>=42,<50",
]

[project.urls]
Homepage = "https://github.com/ChelseaKR/ledger"
Source = "https://github.com/ChelseaKR/ledger"
Issues = "https://github.com/ChelseaKR/ledger/issues"

# Published extras stay under `[project.optional-dependencies]` — they ship in the
# wheel's metadata and remain installable by any consumer. `print` is a documented
# user-facing install path (ADR-0008, `pip install ledger-archive[print]`), so it
# must NOT move to a PEP 735 dependency group (groups are never published).
#
# Opt-in only (EXP-08): `ledger print-edition` renders its accessible HTML booklet
# and the always-present plain-text fixity digest with no extra dependency at all;
# this extra adds the scannable QR-code image alongside that text. `segno` is a
# pure-Python, zero-dependency QR/SVG generator, so installing it keeps the "no
# heavy dependency tree" property even for the machines that opt in.
[project.optional-dependencies]
print = [
    "segno>=1.5,<2",
]
# CQ-47 mutation tooling is deliberately opt-in; it does not inflate the normal
# contributor/CI dependency group or the runtime dependency surface.
mutation = [
    "mutmut>=3.6",
]

# Deployability/installability: `pipx install ledger-archive` then `ledger ...`.
[project.scripts]
ledger = "ledger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ledger"]

# The public server links this stylesheet at /static/app.css. Ship it inside the
# Python package so wheel installs and containers do not depend on the repository
# layout that happened to exist while the artifact was built.
[tool.hatch.build.targets.wheel.force-include]
"web/static/app.css" = "ledger/static/app.css"

# SEC-13/CQ-09/CQ-27: dev tooling lives in a PEP 735 dependency group, not a
# `[project.optional-dependencies]` extra. Extras ship in the built wheel's
# metadata and are installable by any consumer (`pip install ledger-archive[dev]`);
# a dependency group is contributor/CI-only tooling, never published, and is
# resolved together with everything else into the single lockfile (`uv.lock`) that
# `uv sync` and `uv lock --check` pin and verify (supply-chain reproducibility).
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15",
    "mypy>=1.18",
    "pip-audit>=2.7",
    # Static analysis of the workflow YAML itself (CICD-19); see the
    # workflow-lint job in .github/workflows/ci.yml.
    "zizmor>=1.9",
    # i18n message-catalog tooling (INTERNATIONALIZATION-STANDARD §3/§4). Babel
    # provides `pybabel extract` and the CLDR-backed `Locale.parse` used by the
    # i18n gates. Pure Python (no PyICU/native ICU build), so ledger keeps its
    # "run on one inexpensive box, no heavy dependency tree" property.
    # G12: a new major may change CLDR plural/locale data and needs explicit review.
    "babel>=2.16,<3",
    # FIX-09 property-based fuzzing of parsers at the anonymous-contribution edge.
    "hypothesis>=6.100",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Correctness + analyzability gates. E/F pyflakes, I import order, B bugbear,
# UP pyupgrade, S bandit security, SIM simplify, RUF ruff-specific, C901 cyclomatic
# complexity (CODE-QUALITY-STANDARD CQ-05 — analyzability: a function past the
# threshold is a maintainability and review-risk signal, caught at merge time
# rather than discovered later).
select = ["E", "F", "I", "B", "UP", "S", "SIM", "RUF", "C901"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are the point of a test

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
mypy_path = "src"
files = ["src/ledger"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
markers = [
    "preservation: fixity, bagging, and content-addressing guarantees",
    "disclosure: access-policy, grant, and no-outing guarantees",
    "accessibility: surfaces that must meet WCAG 2.2 AA",
    "recovery: backup/restore and disaster-recovery guarantees",
]

[tool.coverage.run]
branch = true
source = ["ledger"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# CODE-QUALITY-STANDARD CQ-08 (Tier-1 gate): measured branch coverage is 86% as of
# the 2026-07-05 audit; the floor is set at the level the suite already clears so
# a future refactor cannot silently erode the disclosure/no-outing test suite this
# README calls its enforcement mechanism.
fail_under = 85

# Mutation testing (CODE-QUALITY-STANDARD CQ-47) — advisory only, never a merge
# gate. Line/branch coverage proves a line *ran*; it does not prove a test would
# *notice* if that line were wrong. For ledger's safety-critical surface — grants,
# access policy, redaction, contributor identity, fixity — that gap is exactly
# where a no-outing or corruption bug would hide. mutmut systematically injects
# small faults ("mutants") and reports which ones the existing suite fails to
# catch ("survivors"). Run with `make mutation`; see docs/MUTATION-TESTING.md for
# scope, baseline, and how to read survivors.
[tool.mutmut]
# Copy the whole package so imports resolve (access/ imports ledger.models,
# identity.py imports ledger.errors/ledger.models, ...), but generate mutants for
# the three safety-critical modules named in CQ-47 only.
source_paths = ["src"]
only_mutate = [
    "src/ledger/access/*.py",
    "src/ledger/identity.py",
    "src/ledger/fixity.py",
]
# Kill oracle: the pytest markers that already exist for exactly this purpose
# (pyproject [tool.pytest.ini_options].markers) — `disclosure` covers
# access-policy/grant/no-outing guarantees (grants, policy, redaction, identity),
# `preservation` covers fixity/bagging/content-addressing guarantees. Reusing the
# markers keeps the kill-oracle selection self-maintaining as tests are added or
# moved, instead of a hand-enumerated file list that silently drifts.
pytest_add_cli_args_test_selection = ["-m", "disclosure or preservation"]
